# harbinger

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  RUN.md  build.bat  example-collection.json  example-environment.json  package-lock.json  requirements.md  todo.md
.github/workflows/: publish-packages.yml  release.yml  update-brew.yml
src/: lib.rs  main.rs  openapi.rs  runner.rs
src-tauri/: Cargo.toml  tauri.conf.bak  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: collection.rs  lib.rs  main.rs
ui/: README.md  index.html  package.json  vite.config.js  vite.config.js.bak
ui/src/: App.jsx  EnhancedUI.jsx  main.jsx
